# Senior-Project

./: .gitignore  LICENSE  README.md  hello.py  package-lock.json  package.json  secretusername.py
senior-sage/: .gitignore  package-lock.json  package.json
senior-sage/.ragit/configs/: api.json  build.json
senior-sage/.ragit/prompts/: answer_query.pdl  multi_turn.pdl  raw.pdl  rerank_summary.pdl
senior-sage/src/: App.jsx  main.jsx
senior-sage/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
senior-sage/src-tauri/.ragit/: index.json  models.json  usages.json
senior-sage/src-tauri/.ragit/configs/: api.json  query.json
senior-sage/src-tauri/.ragit/prompts/: describe_image.pdl  extract_keyword.pdl  summarize.pdl  summarize_chunks.pdl
senior-sage/src-tauri/src/: main.rs  vosk.rs
senior-sage/src-tauri/tests/: pvrec_tests.rs  vosk_tests.rs
senior-sage/src/components/: Header.jsx  MicrophoneButton.jsx
senior-sage/src/components/cards/: Card.jsx  (+1 more)
senior-sage/src/pages/: Home.jsx  Llm.jsx  WizardLlm.jsx
senior-sage/src/services/: chatService.js  ollamaService.js  ragService.js  speechSynthesisService.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Avatar.jsx  Header.jsx  MicrophoneButton.jsx
src/components/states/: Base.jsx  Speaking.jsx  Thinking.jsx
src/pages/: Amy.jsx  David.jsx  Home.jsx  Llm.jsx  Ryan.jsx  William.jsx
src/services/: chatService.js  speechSynthesisService.js
test/: package-lock.json  package.json
test/src-tauri/: Cargo.toml  tauri.conf.json
(+1 files in other folders)
